2009-03-16  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/include.xsl: Added support for deferring includes
	until runtime by setting the 'pfx:include' element's 'level' attribute 
	to 'runtime'. The 'part' and 'href' values can be lately bound using
	the 'pfx:part' and 'pfx:href' elements, which are evaluated at
	runtime.

2009-03-11  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/SessionContextImpl.java:
	catch all exceptions thrown in SessionStatusListeners to ensure that
	SessionAdmin.valueUnbound is called to remove session

2009-03-10  Martin Leidig  <mleidig@schlund.de>

	Added Live-Jars support.

	Modified:
	* src/de/schlund/pfixxml/resources/ModuleResourceProvider.java: Use
	ModuleSourceLocator for looking up source or unpacked module directory

	Added:
	* src/de/schlund/pfixcore/util/LiveJarInfo.java: Reads information
	about configured live jars
	* src/de/schlund/pfixxml/resources/ModuleSourceResource.java:
	ModuleResource implemtation for file system
	* src/de/schlund/pfixxml/resources/ModuleSourceLocatorRegistry.java:
	registry for ModuleResourceLocators
	* src/de/schlund/pfixxml/resources/ModuleSourceLocator.java: interface
	for locators providing source file access for modules

2009-03-08  Martin Leidig  <mleidig@schlund.de>

	Fixed include error handling. Log detected modules.

	* src/de/schlund/pfixcore/util/ModuleInfo.java
	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/util/XsltResourceNotFoundException.java

2009-03-07  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/main/java/de/schlund/pfixxml/targets/TargetGeneratorFactoryBean.java: 
	* src/main/java/org/pustefixframework/config/project/parser/PustefixContextXMLRequestHandlerParsingHandler.java: 
	* src/main/java/org/pustefixframework/config/project/parser/XMLGeneratorInfoParsingHandler.java: 
	* src/main/java/org/pustefixframework/config/project/XMLGeneratorInfo.java: 